# many

./: .coveragerc  .flake8  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
examples/elasticsearch/: README.md  docker-compose.yml  es_migrate.py
examples/iceberg/: README.md  docker-compose.yml  ib_migrate.py
examples/postgresql/: README.md  docker-compose.yml  pg_migrate.py
src/many/: migrate.py
tests/: conftest.py  test_app.py  test_migrate.py  test_revise.py  test_utils.py  utils.py
